# PySubstringSearch

./: .gitignore  Cargo.toml  README.md  build.rs  cortex.yaml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  pythonpackage.yml
pysubstringsearch/: __init__.py  pysubstringsearch.pyi
src/: lib.rs  msufsort.cc  msufsort.h  msufsort.hpp  pysubstringsearch.cpp
tests/: test_pysubstringsearch.py
