[package]
name = "pysubstringsearch"
version = "0.5.0"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "A Python library written in Rust that searches for substrings quickly using a Suffix Array"
readme = "README.md"
repository = "https://github.com/intsights/pysubstringsearch"
homepage = "https://github.com/intsights/pysubstringsearch"
license = "MIT"
keywords = [
    "substring",
    "pattern",
    "search",
    "suffix",
    "array",
    "rust",
    "pyo3"
]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[lib]
name = "pysubstringsearch"
crate-type = ["cdylib"]

[dependencies]
ar = "0.8"
cxx = "1.0"
bstr = "0.2"
byteorder = "1"
rayon = "1"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]

[build-dependencies]
cxx-build = "1.0"

[profile.release]
lto = true
panic = "abort"
