[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "pysubstringsearch/*.py",
    "pysubstringsearch/*.pyi"
]

[tool.poetry]
name = "pysubstringsearch"
version = "0.6.0"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "A Python library written in Rust that searches for substrings quickly using a Suffix Array"
readme = "README.md"
repository = "https://github.com/intsights/pysubstringsearch"
homepage = "https://github.com/intsights/pysubstringsearch"
license = "MIT"
keywords = [
    "substring",
    "pattern",
    "search",
    "suffix",
    "array",
    "rust",
    "pyo3"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
gitpython = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--tb=native",
    "--pythonwarnings=all",
]
testpaths = [
    "tests",
]
